--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 
 ### Linux ###
 *~
-
+.idea*
+.idea
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
